# brocode

./: .gitignore  AGENTS.md  CLAUDE.md  KEYBINDINGS.md  Makefile  README.md  REMOTE.md  package.json  turbo.json
.docs/: architecture.md  codex-prerequisites.md  encyclopedia.md  runtime-modes.md  scripts.md
.github/: VOUCHED.td
.github/workflows/: ci.yml  release.yml
.plans/: github-issues-prs-feature.md
apps/desktop/: package.json
apps/desktop-tauri/: README.md  package.json  tsconfig.json  turbo.jsonc
apps/desktop-tauri/scripts/: build-release-assets.js  run-tauri-dev.js  run-tauri-dev.test.ts  run-web-with-tauri-entry.js
apps/desktop-tauri/src/: desktopBridge.test.ts  desktopBridge.ts  main.ts  vite-env.d.ts  web-entry.d.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: backend.rs  bridge.rs  errors.rs  main.rs  paths.rs
apps/desktop/resources/: icon-legacy.icns
apps/desktop/scripts/: dev-electron.mjs  electron-launcher.mjs
apps/desktop/src/: browserManager.ts  browserUsePipeServer.test.ts  browserUsePipeServer.ts  main.ts  (+8 more)
apps/server/: package.json  tsdown.config.test.ts  tsdown.config.ts
apps/web/: index.html  package.json  vite.config.test.ts  vite.config.ts
docs/: release.md
scripts/: build-desktop-artifact-mac-config.test.ts  build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  merge-mac-update-manifests.test.ts  release-smoke.ts  update-release-package-versions.ts
scripts/lib/: desktop-platform-build-config.ts
(+397 files in other folders)
