[package]
name = "dpcode_desktop_tauri"
version = "0.0.42"
description = "DP Code Tauri desktop shell proof of concept"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "time"] }
